--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -6,8 +6,6 @@ on:
       - "main"
       - "deploy/dev"
       - "deploy/enterprise"
-      - "build/**"
-      - "release/e-*"
     tags:
       - "*"
 
@@ -16,15 +14,15 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
-  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-  DIFY_WEB_IMAGE_NAME: ${{ vars.DIFY_WEB_IMAGE_NAME || 'langgenius/dify-web' }}
-  DIFY_API_IMAGE_NAME: ${{ vars.DIFY_API_IMAGE_NAME || 'langgenius/dify-api' }}
+  DOCKERHUB_USER: ${{ secrets.REGISTRY_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.REGISTRY_PASSWORD }}
+  DIFY_WEB_IMAGE_NAME: ${{ vars.DIFY_WEB_IMAGE_NAME || 'sf-service/dify-web' }}
+  DIFY_API_IMAGE_NAME: ${{ vars.DIFY_API_IMAGE_NAME || 'sf-service/dify-api' }}
 
 jobs:
   build:
     runs-on: ${{ matrix.platform == 'linux/arm64' && 'arm64_runner' || 'ubuntu-latest' }}
-    if: github.repository == 'langgenius/dify'
+    if: github.repository == 'gofancyever/dify'
     strategy:
       matrix:
         include:
@@ -51,11 +49,12 @@ jobs:
           platform=${{ matrix.platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Login to ACR
+        uses: aliyun/acr-login@v1
         with:
-          username: ${{ env.DOCKERHUB_USER }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
+          login-server: https://registry.cn-beijing.aliyuncs.com
+          username: "${{ secrets.REGISTRY_USERNAME }}"
+          password: "${{ secrets.REGISTRY_PASSWORD }}"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -100,7 +99,7 @@ jobs:
   create-manifest:
     needs: build
     runs-on: ubuntu-latest
-    if: github.repository == 'langgenius/dify'
+    if: github.repository == 'gofancyever/dify'
     strategy:
       matrix:
         include:
@@ -118,11 +117,12 @@ jobs:
           pattern: digests-${{ matrix.context }}-*
           merge-multiple: true
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Login to ACR
+        uses: aliyun/acr-login@v1
         with:
-          username: ${{ env.DOCKERHUB_USER }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
+          login-server: https://registry.cn-beijing.aliyuncs.com
+          username: "${{ secrets.REGISTRY_USERNAME }}"
+          password: "${{ secrets.REGISTRY_PASSWORD }}"
 
       - name: Extract metadata for Docker
         id: meta
