--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -52,9 +52,10 @@ jobs:
       - name: Login to ACR
         uses: aliyun/acr-login@v1
         with:
-          login-server: https://registry.cn-beijing.aliyuncs.com
+          login-server: registry.cn-beijing.aliyuncs.com
           username: "${{ secrets.REGISTRY_USERNAME }}"
           password: "${{ secrets.REGISTRY_PASSWORD }}"
+          region-id: cn-beijing
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -120,10 +121,10 @@ jobs:
       - name: Login to ACR
         uses: aliyun/acr-login@v1
         with:
-          login-server: https://registry.cn-beijing.aliyuncs.com
+          login-server: registry.cn-beijing.aliyuncs.com
           username: "${{ secrets.REGISTRY_USERNAME }}"
           password: "${{ secrets.REGISTRY_PASSWORD }}"
-
+          region-id: cn-beijing
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
