--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -49,13 +49,12 @@ jobs:
           platform=${{ matrix.platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
 
-      - name: Login to ACR
-        uses: aliyun/acr-login@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          login-server: registry.cn-beijing.aliyuncs.com
+          registry: registry.cn-beijing.aliyuncs.com
           username: "${{ secrets.REGISTRY_USERNAME }}"
           password: "${{ secrets.REGISTRY_PASSWORD }}"
-          region-id: cn-beijing
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -79,7 +78,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env[matrix.image_name_env] }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=${{ matrix.service_name }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.service_name }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.service_name }}  
 
       - name: Export digest
         env:
@@ -118,13 +117,13 @@ jobs:
           pattern: digests-${{ matrix.context }}-*
           merge-multiple: true
 
-      - name: Login to ACR
-        uses: aliyun/acr-login@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          login-server: registry.cn-beijing.aliyuncs.com
+          registry: registry.cn-beijing.aliyuncs.com
           username: "${{ secrets.REGISTRY_USERNAME }}"
           password: "${{ secrets.REGISTRY_PASSWORD }}"
-          region-id: cn-beijing
+
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
