--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: registry.cn-beijing.aliyuncs.com
+          registry: "registry.cn-beijing.aliyuncs.com"
           username: "${{ secrets.REGISTRY_USERNAME }}"
           password: "${{ secrets.REGISTRY_PASSWORD }}"
 
